some changes after review